# mcx

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  ChangeLog.txt  ForReviewers.txt  LICENSE.txt  Makefile  NOTICE.txt  README.md  README.txt  TODO.txt  genlog.sh
.git_filters/: rcs-keywords.smudge
.github/: check-pypi-upload.sh  pull_request_template.md
.github/macos_wheel_builder/: Dockerfile  build.zsh  macos.sh
.github/manylinux2014_wheel_builder/: Dockerfile  build_wheels.sh
.github/workflows/: build_all.yml  build_linux_manywheel.yml  build_macos_arm64_wheel.yml  build_macos_wheel.yml  build_windows_wheel.yml  release_test.yml
Docker/PyPI/: Dockerfile
deploy/: buildmcx.sh
doc/: Citation.txt  Download.txt  FAQ.txt  Get_Started.txt  INSTALL.txt  Setup_MCX.txt  gendoc.sh  mcx_command_option_cheatsheet.xlsx  mcx_help.html
doc/mcx_help_files/: wikistyle_column.css  wikistyle_column_print.css  wikistyle_column_webfont.css
example/: mcx_demo.mcxp
example/benchmark/: run_benchmark1.bat  run_benchmark1.sh  run_benchmark2.bat  run_benchmark2.sh  run_benchmark3.bat  run_benchmark3.sh
example/benchrng/: Makefile  rngspeed.cu  runbench.sh  serialcorr.m
example/bubble/: bubble.inp  run_bubble.sh
example/colin27/: README.txt  colin27.inp  colin27.json  colin27_v3.bin.lzma  dump_json.bat  dump_json.sh  dump_volume.bat  dump_volume.sh  run_atlas.bat  run_atlas.sh
example/digimouse/: README.txt  digimouse.json  digimouse_0.8mm.bin.lzma  dump_volume.bat  dump_volume.sh  run_atlas.bat  run_atlas.sh
example/gmaia-benchmark/: SCRIPT  cubic60.json
example/masktest/: cubic8.json  mtest.inp  plotresults.m  run_masktest.sh
example/mcxlab/: DESCRIPTION  LICENSE.txt  NEWS  README.txt
example/miscount/: benchmiscnt.inp  runmiscount.sh
example/muamus/: mua_mus_g_n.json  run_muamus.bat  run_muamus.sh  run_muamusgn.bat  run_muamusgn.sh  test_muamus_float.json
example/multipattern/: README.txt  cubic60.json  multipattern.json  plotresults.m  run_allinone_json.sh  run_multipattern.bat  run_multipattern.sh
example/multisrc/: multisrc.json  run_eachsrc.bat  run_eachsrc.sh  run_multisrc.bat  run_multisrc.sh  run_src9.bat  run_src9.sh
example/polarized/: onelayer.json  onelayer_plot_results.m  run_onelayer.sh
example/quicktest/: README.txt  cubic60.json  grid2x.json  grid3x.json  listgpu.bat  qtest.inp  qtest.json  qtest_widefield.inp  run_grid2x.sh  run_grid3x.sh  run_qtest.bat  run_qtest.sh  run_qtest_silent.sh
example/rfreplay/: baseline.json  rfreplay.json  run_rfreplay.sh
example/rngcycle/: rngcycle.cu  testcycle.sh
example/shapetest/: Makefile  jsonshape_allinone.json  plotshapemask.m  run_shapetest.sh  shapes.json
example/skinvessel/: README.txt  mcxyz_bench.json  run_mcxyz_bench.bat  run_mcxyz_bench.sh  skinvessel.json
example/speedtest/: README.txt  benchcpeed.inp  cubic60.json  genreport.sh  runspeedbench.sh
example/sphbox/: README.txt  plotresults.m  runspherebox.bat  runspherebox.sh  show_json.bat  show_json.sh  spherebox.inp  spherebox.json
example/srcbenchmark/: 0benchmark-pencil.json  1benchmark-isotropic.json  3benchmark-gaussian.json  4benchmark-planar.json  6benchmark-fourier.json  7benchmark-arcsine.json  8benchmark-disk.json  9benchmark-fourierx.json  benchmark1.mc2  (+4 more)
inno/: MCXStudio.iss
manpage/: mcx.1  mcxcontest.1  mcxshow.1  mcxstudio.1  mcxviewer.1  photon.1
mcxlab/: DESCRIPTION  INDEX  INSTALL.txt  LICENSE.txt  NEWS  PKG_ADD  README.txt  init_mcxlab.m  json2mcx.m  mcx2json.m  mcxcreate.m  mcxlab.m  mcxlab_atom.m  mcxplotshapes.m  mcxpreview.m
mcxone/: index.html
mcxstudio/: MCXShow.desktop  MCXStudio.desktop  MCXViewer.desktop  Makefile  README.txt  Texture_3D_Unit.pas  doc  lazhelphtml.pas  mcxabout.lfm  mcxabout.lrs  mcxabout.pas  mcxconfig.lfm  mcxconfig.pas  mcxgui.lfm  mcxgui.lrs  mcxgui.pas  mcxloadfile.lfm  mcxloadfile.pas  mcxnewsession.lfm  mcxnewsession.pas  mcxoutput.lfm  mcxoutput.pas  mcxrender.lfm  mcxrender.pas  mcxshape.lfm  mcxshape.pas  mcxshow.desktop  mcxshow.lpi  mcxshow.lpr  mcxshow.res  mcxsource.lfm  mcxsource.pas  mcxstoprun.lfm  mcxstoprun.pas  mcxstudio.desktop  mcxstudio.lpi  mcxstudio.lpr  mcxstudio.rc  mcxview.lfm  mcxview.pas  (+10 more)
nsight/: .cproject  .project
pmcx/: Makefile  README.md  setup.py
schema/: mcxinput.json
script/: photon
speedcontest/: mcxcontest  mcxcontest.pl
src/: CMakeLists.txt  Makefile  br2cu.h  clangformat.sh  interface-common.cpp  interface-common.h  logistic_rand.cu  logistic_rand_ring3.cu  makefile_ocelot  makefile_release  mcextreme.c  mcextreme.cu  mcx.c  mcx_bench.c  mcx_bench.cc  mcx_bench.h  mcx_const.h  mcx_core.cu  mcx_core.h  mcx_cucomplex.cu  mcx_doxygen.cfg  mcx_ieee754.h  mcx_lang.c  mcx_lang.h  mcx_mie.c  mcx_mie.cpp  mcx_mie.h  mcx_neurojson.cpp  mcx_neurojson.h  mcx_rand_posix.cu  mcx_rand_xoroshiro128p.cu  mcx_rand_xorshift128p.cu  mcx_shapes.c  mcx_shapes.h  mcx_tictoc.c  mcx_tictoc.h  mcx_utils.c  mcx_utils.h  mcxdoxy.cfg  mcxlab.cpp  (+10 more)
src/.github/workflows/: build_linux_manywheel.yml
src/Docker/PyPI/: build_wheels.sh
src/ubj/: CMakeLists.txt  Makefile  README.md  ubj.h  ubj_internal.h  ubjr.c  ubjrw.c  ubjw.c
src/zmat/: CMakeLists.txt  Makefile  zmat.cpp  zmatlib.c  zmatlib.h
src/zmat/easylzma/: Makefile  compress.c  decompress.c
src/zmat/easylzma/pavlov/: LzmaEnc.c
src/zmat/miniz/: zlib.h
test/: reporttest.pl  testmcx.sh
utils/: DESCRIPTION  INDEX  NEWS  cwDrefMC.m  cwFluxDiffusion.m  cwdiffusion.m  cwfluencediffusion.m  cwfluxdiffusion.m  demo_mcxlab.m  findReff.m  getdistance.m  image3i.m  islicer.m  json2mcx.m  loadmc2.m  loadmch.m  mcx2json.m  mcxcreate.m  mcxcwdref.m  mcxdcsg1.m  mcxdetphoton.m  mcxdettime.m  mcxdettpsf.m  mcxdetweight.m  mcxfluence2energy.m  mcxloadfile.m  mcxloadnii.m  mcxmeanpath.m  mcxmeanscat.m  mcxnuvoxel.m  mcxplotphotons.m  mcxplotshapes.m  mcxplotvol.m  mcxpreview.m  mcxrfmusreplay.m  mcxrfreplay.m  mcxsvmc.m  normalizemcx.m  rbgetreff.m  serialcorr.m  (+2 more)
utils_python/: __init__.py
winget/: coti.mcxstudio.installer.yaml  coti.mcxstudio.locale.en-US.yaml  coti.mcxstudio.yaml  mcxstudio.yaml
(+359 files in other folders)
